contact me hover

--- a/About Me/style.css
+++ b/About Me/style.css
@@ -42,7 +42,7 @@ img	{
 	margin: 10px;	
 }
 
-a:hover {
+.hover1:hover {
 	color: #FFF9BA;
 }
 
@@ -69,5 +69,14 @@ img {
 	padding: 20px;
 	margin: 10px;
 	clear: both;
+}
+
+.hover2 {
+	color: black;
+}
+
+.hover2:hover {
+	background-color: black;
+	color: #FFF9BA;
 }
 
