--- a/Image Gallery/gallery.css
+++ b/Image Gallery/gallery.css
@@ -7,12 +7,11 @@ body {
 }
 
 .photos {
-	border: 1px solid #FFF9BA;
+	border: 1px solid #FFF3D9;
 }
 
 h1	{
-	color: #FFF9BA;
-	font-family: Georgia;
+	color: #FFF3D9;
 }
 
 img	{
