--- a/About Me/style.css
+++ b/About Me/style.css
@@ -10,7 +10,6 @@
 
 body {
 	background: black;
-	/*margin: 20px;*/
 }
 
 h1	{
@@ -49,11 +48,12 @@ img	{
 img {
 	width: 30%;
 	float: left;
+	margin: 10px;
 	padding-bottom: 10px;
 	clear: both;
 }
 
-#slogan {
+#travel {
 	color: white;
 	width: 60%;
 	float: right;
@@ -78,4 +78,35 @@ img {
 	background-color: black;
 	color: #FFF3D9;
 }
+
+@media all and (max-width: 840px) {
+	body {
+		margin: 10px;
+	}
+
+	#intro, #contact {
+		float: none;
+		width: 100%;
+		margin: auto;
+
+	}
+
+	img {
+		float: none;
+		width: 70%;
+		display: block;
+		margin: auto;
+		padding-top: 20px;
+	}
+
+	#about, #travel {	
+		float: none;
+		width: 70%;
+		margin: auto;
+		padding: 0 0 20px 0;
+	}
+}
+
+
+
 
