--- a/Image Gallery/gallery.css
+++ b/Image Gallery/gallery.css
@@ -3,10 +3,10 @@
 body {
 	background-color: black;
 	margin: 20px;
-	/*width: 900px;*/
 }
 
 .photos {
+	text-align: center;
 	border: 1px solid #FFF3D9;
 }
 
@@ -15,19 +15,20 @@ h1	{
 }
 
 img	{
-	width: 200px;
+	text-align: center;
+	width: 40%;	
+	height: auto;
 	padding: 20px;
 }
 
-@media all and (max-width: 420px) {
-	body {
-		margin: auto;
-	}
+
+@media all and (max-width: 600px) {
 	h1 {
 		text-align: center;
 		font-size: 30px;
 	}
 	img {
-		width: 140px;
-	}
+		width: 100%;		
+	}	
 }
+
